Bug 143483 - sw: text field format is changed during iteration
Summary: sw: text field format is changed during iteration
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.2.2 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.3.0 target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-21 16:41 UTC by Vasily Melenchuk (CIB)
Modified: 2022-04-15 19:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
chapter_number.odt (9.42 KB, application/vnd.oasis.opendocument.text)
2021-07-21 16:42 UTC, Vasily Melenchuk (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2021-07-21 16:41:31 UTC
Description:
When I iterate through fields in document some of them are shown with incorrect format and changing it afterwards.

Steps to Reproduce:
1. Open attached document
2. Double click 4th field (field with text "1")
3. Edit field dialog is opened with type="Chapter" and format="Chapter number without separator") - okay
4. Click on button with left arrow to iterate to previous field. Right now we are at 3rd field "Chapter 1 -Another title" - everything is okay also here
5. Once again click on button with left arrow.
6. On field #2 format is displayed incorrectly and if you will click again left arrow button this format will be applied to field changing its text.

Actual Results:
Field #2 value and format is changed after iteration.

Expected Results:
Nothing is changed if we just iterate through document fields.


Reproducible: Always


User Profile Reset: No



Additional Info:
When field #2 is double-clicked directly it does show correct field format.
Comment 1 Vasily Melenchuk (CIB) 2021-07-21 16:42:00 UTC
Created attachment 173750 [details]
chapter_number.odt
Comment 2 Commit Notification 2021-07-26 13:19:32 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/965636121cb1fb09739fcbca2c85f0a07bf6bf96

tdf#143483: sw field edit: improved selection of format

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-04-15 19:23:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/267a0e94920dbaf3f9db316c9cbfe6fa72be8818

tdf#143483: sw: Add UItest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.