tdf#143483: sw field edit: improved selection of format

During selection of used field format do this after list
is initialized. Otherwise selection can be lost during
further treelist filling.

Removed ancient hack which was trying to select at least
something in field format list: it is incorrect and does
not cover all possible fields/formats. It is just hiding
any potenial initialization problems.

Change-Id: Ibbbdd1e9a3436fec37cc49c11e6e235e8afcf4ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119341
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>